logs/django-activitysync.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/activitysync'...
Listing './lib/python3.5/site-packages/activitysync/management'...
Listing './lib/python3.5/site-packages/activitysync/management/commands'...
Compiling './lib/python3.5/site-packages/activitysync/management/commands/updateactivities.py'...
***   File "./lib/python3.5/site-packages/activitysync/management/commands/updateactivities.py", line 45
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/activitysync/migrations'...
Compiling './lib/python3.5/site-packages/activitysync/migrations/0003_convert_to_provider_objects.py'...
***   File "./lib/python3.5/site-packages/activitysync/migrations/0003_convert_to_provider_objects.py", line 11
    print "Activity: %s" % activity.title
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/activitysync/providers'...
Compiling './lib/python3.5/site-packages/activitysync/providers/googlereader.py'...
***   File "./lib/python3.5/site-packages/activitysync/providers/googlereader.py", line 18
    print 'Attempting to parse Google Reader feed'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/activitysync/providers/redditprovider.py'...
***   File "./lib/python3.5/site-packages/activitysync/providers/redditprovider.py", line 16
    print 'Attempting to parse Reddit feed'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/activitysync/providers/twitterprovider.py'...
***   File "./lib/python3.5/site-packages/activitysync/providers/twitterprovider.py", line 16
    print 'Attempting to obtain Twitter items'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/activitysync/templates'...
Listing './lib/python3.5/site-packages/activitysync/templates/activitysync'...
Listing './lib/python3.5/site-packages/activitysync/templatetags'...
Listing './lib/python3.5/site-packages/django_activitysync-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
